<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fris_button_label"
                android:id="@+id/frisButton"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bier_button_label"
                android:id="@+id/bierButton"
                android:layout_alignTop="@+id/frisButton"
                android:layout_toRightOf="@+id/frisButton"
                android:layout_toEndOf="@+id/frisButton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wijn_button_label"
                android:id="@+id/wijnButton"
                android:layout_alignTop="@+id/button2"
                android:layout_toRightOf="@+id/button2"
                android:layout_toEndOf="@+id/button2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/koffie_button_label"
                android:id="@+id/koffieButton"
                android:layout_below="@+id/frisButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bin_dist_button_label"
                android:id="@+id/binDistButton"
                android:layout_below="@+id/frisButton"
                android:layout_toRightOf="@+id/frisButton"
                android:layout_toEndOf="@+id/frisButton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buit_dist_button_label"
                android:id="@+id/buitDistButton"
                android:layout_alignBottom="@+id/binDistButton"
                android:layout_toRightOf="@+id/binDistButton"
                android:layout_toEndOf="@+id/binDistButton" />

        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nieuwe_bestelling_button_label"
            android:id="@+id/nieuweBestellingButton"
            android:layout_below="@+id/koffieButton"
            android:layout_centerHorizontal="true" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bestelling"
        android:id="@+id/bestellingTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/omzet"
        android:id="@+id/omzetTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/omzet"
        android:id="@+id/gemiddeldeBestellingTextView" />


</LinearLayout>
